make unique file

--- a/numcal.tex
+++ b/numcal.tex
@@ -55,13 +55,14 @@ com uma acurácia $x_{ac}$ para um número $N$ de iterações.
 	sem sucesso.\quad\pfbox
 \end{itemize}
 
+\pagebreak
 \paragraph{Programa B.} A seguir mostra uma possível implementação 
 do Algoritmo~B.
 
 \lstinputlisting[
-	lastline=21,%
-	label={lst:bisect},%
-	caption={Implementação do Algoritmo B (método da bissecção).}
+	firstline=4,%
+	lastline=25,%
+	label={lst:bisect}%
 ]{src/bisect.c}
 
 \end{document}
