fix program B text

--- a/numcalc.tex
+++ b/numcalc.tex
@@ -56,7 +56,7 @@ com uma acurácia $x_{ac}$ para um número $N$ de iterações.
 \end{itemize}
 
 \pagebreak
-\paragraph{Programa B.} A seguir mostra uma possível implementação 
+\paragraph{Programa B.} A seguir uma possível implementação 
 do Algoritmo~B.
 
 \lstinputlisting[
