--- a/numcalc.tex
+++ b/numcalc.tex
@@ -14,6 +14,7 @@
 \title{Noções de Cálculo Numérico}
 \author{Adriano J. Holanda}
 \date{2022-02-22}
+\maketitle
 
 \section*{Localização de Zeros de Funções}
 
