fix first and last lines for programs

--- a/zero.tex
+++ b/zero.tex
@@ -50,17 +50,17 @@ de iterações {\tt N}.
 	sem sucesso.\quad\pfbox
 \end{itemize}
 
-\pagebreak
 
 \paragraph{Programa B.} A seguir uma possível implementação 
 do Algoritmo~B.
 
 \lstinputlisting[
-	firstline=4,%
-	lastline=25,%
+	firstline=2,%
+	lastline=20,%
 	label={lst:bisection}%
 ]{src/bisection.c}
 
+\pagebreak
 \subsection*{Método da posição falsa}
 
 No método da posição falsa ({\it regula falsi\/}), 
@@ -79,8 +79,62 @@ e $b$ é dada por
 \begin{equation}
 	\ell(x) = a + f(a)\frac{b-a}{f(b)-f(a)}.
 \end{equation}
+ 
+\paragraph{Algoritmo R.}
+O algoritmo a seguir usa o método da posição falsa 
+({\it regula falsi\/}) para 
+localizar o zero de uma função $f(x)$ 
+entre os pontos $a$ e $b$ desde que $f(a)f(b)<0$ 
+ com uma acurácia $\epsilon$ para um número máximo 
+de iterações $N$. Para calcular a secante no passo
+B3, a condição $f(a)<f(b)$ deve ser satisfeita, caso
+contrário, trocar $a$ por $b$ e $b$ por $a$.
+ 
+ \begin{itemize}
+
+	 \item[\bf R1] [Inicializar.] Atribuir $i \leftarrow 1$.
 
 
+	 \item[\bf R2] [Checar número de iterações.] Se $i>${\tt N}, 
+ 		ir para R9.
+
+	\item[\bf R3] [Achar a secante da reta que passa por $a$ e $b$.] 
+		Calcular \\\hbox{$m = a+ f(a)\frac{b-a}{f(b)-f(a)}$}.
+
+	\item[\bf R4] [Checar os critérios de parada.] Se $f(m)=0$
+		(a raiz foi encontrada)
+		ou \hbox{$|b-a| < \epsilon$} (uma aproximação da
+		raiz é suficiente), ir para R9.
+
+	\item[\bf R5] [Deslocar um dos limites para a secante.]
+		Se $f(m)<0$ ir para R6, caso contrário 
+		ir para R7.
+
+	\item[\bf R6] [Deslocar $a$ para a secante.] Atribuir
+		$a\leftarrow m$. Ir para o passo B8.
+
+	\item[\bf R7] [Deslocar $b$ para a secante.] Atribuir
+		$b\leftarrow m$.
+ 
+	\item[\bf R8] [Avançar.] Incrementar $i$ em $1$ unidade e
+		retornar para B2.
+ 
+	\item[\bf R9] [Término do algoritmo.] Se $i\leq N$, o algoritmo
+ 		terminou com sucesso. Caso contrário, terminou 
+	 	sem sucesso.\quad\pfbox
+ \end{itemize}
+
+ \pagebreak
+ \paragraph{Programa R.} A seguir uma possível implementação 
+do Algoritmo~R.
+ 
+ \lstinputlisting[
+	firstline=2,%
+	lastline=20,%
+	label={lst:regula}%
+]{src/regula.c}
+ 
+ \pagebreak
 \section{Método de Newton-Raphson}
 
 \paragraph{Algoritmo N.}
@@ -95,7 +149,7 @@ de iterações $N$.
 \item[\bf N1] [Inicializar.] Atribuir $i \leftarrow 1$ e 
 	$m\leftarrow\frac{(a+b)}{2}$.
 \item[\bf N2] [Checar número de iterações.] Se $i>${\tt MAXIT}, 
-		ir para B9.
+		ir para N9.
 
 	\item[\bf N3] [Achar a distância entre a função $f(x)$ e sua derivada no ponto médio $m$.]
 		Calcular $dx\leftarrow\frac{f(m)}{df(m)/dt}$.
