eliminate left-side from last equation for regula

--- a/zero.tex
+++ b/zero.tex
@@ -77,7 +77,7 @@ e $b$ é dada por
 \noindent cujo zero é dado por
 
 \begin{equation}
-	\ell(x) = a + f(a)\frac{b-a}{f(b)-f(a)}.
+	a + f(a)\frac{b-a}{f(b)-f(a)}.
 \end{equation}
  
 \paragraph{Algoritmo R.}
