change lang to Python

--- a/main.tex
+++ b/main.tex
@@ -5,13 +5,13 @@
 \usepackage{graphicx}
 \usepackage{listings}
 \lstset{
-	language=C,%
+	language=Python,%
 	basicstyle={\footnotesize},%
 	identifierstyle={},%
 	keywordstyle={\small\color{brown}},%
 	stringstyle={\ttfamily},
 	numbers=left,%
-	numberstyle={\color{gray}\scriptsize},%
+	numberstyle={\color{gray}\tiny},%
 	numbersep=5pt,%
 	showspaces=false
 }
