--- a/main.tex
+++ b/main.tex
@@ -8,7 +8,7 @@
 	language=Python,%
 	basicstyle={\footnotesize},%
 	identifierstyle={},%
-	keywordstyle={\small\color{brown}},%
+	keywordstyle={\small\color{red!50!black}},%
 	stringstyle={\ttfamily},
 	numbers=left,%
 	numberstyle={\color{gray}\tiny},%
@@ -27,7 +27,7 @@
 \begin{document}
 \title{Noções de Cálculo Numérico}
 \author{Adriano J. Holanda}
-\date{2022-03-08}
+\date{2022-03-15}
 
 \input zero
 
