improve exercises text

--- a/exercises/main.tex
+++ b/exercises/main.tex
@@ -1,10 +1,13 @@
 \documentclass[a4paper]{article}
 
+\usepackage{enumerate}
 \usepackage{fontspec}
 \usepackage{a4wide}
 \usepackage{polyglossia}
 \setdefaultlanguage{brazil}
 
+\title{Cálculo Numérico}
+\author{Adriano J. Holanda}
 \begin{document}
 \input zero
 \end{document}
