--- a/exercises/zero.tex
+++ b/exercises/zero.tex
@@ -1,8 +1,13 @@
+\date{2022-03-15}
+\maketitle
+
 \subsection*{Exercícios}
 
 \paragraph{1.} Mudar o valor da acurácia (variável {\tt eps}) de $x$ para $0,1$ e
 descrever o que ocorre com o valor da raiz estimada para todos 
-os algoritmos. Modifique o valor de {\tt eps} e repita o procedimento.
+os programas para localização de zeros desenvolvidos até o momento. 
+Modifique o valor de {\tt eps} e repita o procedimento 
+um valor de $\epsilon$ ({\tt eps}) igual a 0.001.
 
 \paragraph{2.} Para as funções e intervalos a seguir, implemente a localização da raiz
 usando os métodos estudados:
@@ -10,7 +15,7 @@ usando os métodos estudados:
 \begin{enumerate}[a)]
 	\begin{minipage}{0.5\textwidth}
 	\item $exp(x) -2x -5\qquad 1\leq x\leq 3$;
-	\item $cos(x)-x\qquad 0\leq x\leq\frac{\pi}{2}$; 
+	\item $cos(x)-x\qquad0\leq x\leq\frac{\pi}{2}$; 
 	\item $x^3-5\qquad 1\leq x \leq 2,5$;
 	\end{minipage}
 	\begin{minipage}{0.5\textwidth}
@@ -24,5 +29,5 @@ usando os métodos estudados:
 a raiz da função 
 
 \begin{equation}
-	f(x) = cos(x) - x^2 - \frac{x}{5}\qquad para x>0.
+	f(x) = cos(x) - x^2 - \frac{x}{5}\qquad para\quad x>0.
 \end{equation}
